--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,17 +1,18 @@
 name: Publish
 
 on:
-  workflow_dispatch:
   push:
-    branches: [master]
+    branches:
+      - master
+  workflow_dispatch:
 
 jobs:
   build_and_publish:
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v3
-    - name: Build and Publish
-      run : |
-        docker login --username dahool --password ${{ secrets.GH_TOKEN }} ghcr.io
-        docker build . --tag ghcr.io/dahool/immich-client:latest
-        docker push ghcr.io/dahool/immich-client:latest
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build and Publish
+      - uses: actions/checkout@v3
+        run : |
+          docker login --username dahool --password ${{ secrets.GH_TOKEN }} ghcr.io
+          docker build . --tag ghcr.io/dahool/immich-client:latest
+          docker push ghcr.io/dahool/immich-client:latest
